--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+
+            android:authorities="com.example.arp.start"
+            android:name=".data.dataProvider"
+          />
     </application>
 
 </manifest>
